--- a/web/index.html
+++ b/web/index.html
@@ -18,16 +18,16 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Digital gift cards for everyone.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="cr_rewards_flutter">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Credence Rewards - Digital gift cards for everyone">
+  <link rel="apple-touch-icon" href="icons/android-icon-192x192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/ico" href="favicon.ico" />
 
   <title>cr_rewards_flutter</title>
   <link rel="manifest" href="manifest.json">
